resources/infrastructure/cloudformation-templates/project/elb.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: ""

Parameters:
  ProjectName:
    Description: "Project name"
    Type: "String"
  VpcId:
    Type: "String"
  SubnetIds:
    Type: "List<AWS::EC2::Subnet::Id>"
  ElbCertificateArn:
    Type: "String"

Resources:
  LoadBalancerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: !Sub "${ProjectName}-elb-sg"
      GroupDescription: "Load balancer security group"
      VpcId: !Ref "VpcId"
      SecurityGroupIngress:
        - Description: "HTTP"
          IpProtocol: "tcp"
          FromPort: 80
          ToPort: 8080
          CidrIp: "0.0.0.0/0"
        - Description: "HTTPS"
          IpProtocol: "tcp"
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: "Name"
          Value: !Sub "${ProjectName}-elb-sg"
        - Key: "project-name"
          Value: !Ref "ProjectName"

  LoadBalancerHttpListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      LoadBalancerArn: !Ref "LoadBalancer"
      Port: 80
      Protocol: "HTTP"
      DefaultActions:
       - Type: "redirect"
         RedirectConfig:
           Protocol: "HTTPS"
           Port: 443
           Host: "#{host}"
           Path: "/#{path}"
           Query: "#{query}"
           StatusCode: "HTTP_301"

  LoadBalancerHttpsListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      LoadBalancerArn: !Ref "LoadBalancer"
      Port: 443
      Protocol: "HTTPS"
      SslPolicy: "ELBSecurityPolicy-TLS-1-2-Ext-2018-06"
      Certificates:
        - CertificateArn: !Ref "ElbCertificateArn"
      DefaultActions:
       - Type: "fixed-response"
         FixedResponseConfig:
           StatusCode: 404

  LoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Name: !Ref "ProjectName"
      Scheme: "internet-facing"
      SecurityGroups:
        - !Ref "LoadBalancerSecurityGroup"
      Subnets: !Ref "SubnetIds"
      Type: "application"
      Tags:
        - Key: "project-name"
          Value: !Ref "ProjectName"

Outputs:
  ElbARN:
    Value: !Ref "LoadBalancer"
  ElbSecurityGroupId:
    Value: !Ref "LoadBalancerSecurityGroup"
